--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "dev": "./scripts/dev.sh",
+    "start": "expo start --port 8091",
+    "android": "expo start --android --port 8091",
+    "ios": "expo start --ios --port 8091",
+    "web": "expo start --web --port 8091 --web-port 8092"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
