Fix Codex configuration and add QR code support
- Enable New Architecture (required for reanimated 4.x)
- Simplify dev.sh to start Metro in tunnel mode with QR codes
- Remove auto-build logic that was causing errors
- Add dev:local script for LAN mode (faster, same network)
- Clean up build artifacts to rebuild with new architecture

QR codes now available for physical device testing!

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "./scripts/dev.sh",
+    "dev:local": "./scripts/dev.sh --lan",
     "start": "expo start --port 8091",
     "android": "expo start --android --port 8091",
     "ios": "expo start --ios --port 8091",
