fix: main page layout (title, numbers) and reading page UI improvements

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,12 @@
 EXPO_PUBLIC_SUPABASE_URL=your_supabase_url_here
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
-# RevenueCat Configuration (for react-native-purchases)
-EXPO_PUBLIC_REVENUECAT_API_KEY=your_revenuecat_api_key_here
+# RevenueCat Configuration (platform-specific keys from RevenueCat dashboard)
+EXPO_PUBLIC_REVENUECAT_IOS_KEY=your_ios_key_here
+EXPO_PUBLIC_REVENUECAT_ANDROID_KEY=your_android_key_here
+
+# Dev mode - set to "true" to bypass paywall for testing
+EXPO_PUBLIC_DEV_BYPASS_PAYWALL=false
 
 # Development Configuration
 NODE_ENV=development
