Base template: Vite + React + Three.js landing page
- Celestial 3D background (StarField, Nebula)
- Canvas-based shooting stars overlay
- Hero, Features, Testimonials, Footer sections
- Bold Cinzel headings, medium Garamond body
- Responsive layout with glassmorphism effects
- Tailwind CSS with custom color palette

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,7 @@
 {
-  "extends": "expo/tsconfig.base",
-  "compilerOptions": {
-    "strict": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./*"],
-      "@/components/*": ["./components/*"],
-      "@/lib/*": ["./lib/*"],
-      "@/assets/*": ["./assets/*"],
-      "@/data/*": ["./data/*"]
-    }
-  },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts",
-    "nativewind-env.d.ts"
-  ],
-  "exclude": [
-    "supabase"
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
   ]
 }
