--- a/package.json
+++ b/package.json
@@ -1,55 +1,42 @@
 {
-  "name": "codex",
-  "version": "1.0.0",
-  "main": "index.ts",
+  "name": "codex_web",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "./scripts/dev.sh",
-    "dev:local": "./scripts/dev.sh --lan",
-    "start": "expo start --port 8091",
-    "android": "expo start --android --port 8091",
-    "ios": "expo start --ios --port 8091",
-    "web": "expo start --web --port 8091 --web-port 8092"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^5.2.8",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@supabase/supabase-js": "^2.89.0",
-    "babel-preset-expo": "~54.0.9",
-    "expo": "^54.0.30",
-    "expo-application": "~7.0.8",
-    "expo-constants": "~18.0.12",
-    "expo-font": "~14.0.10",
-    "expo-haptics": "~15.0.8",
-    "expo-image": "~3.0.11",
-    "expo-linear-gradient": "~15.0.8",
-    "expo-linking": "~8.0.11",
-    "expo-notifications": "^0.32.15",
-    "expo-router": "~6.0.21",
-    "expo-secure-store": "~15.0.8",
-    "expo-splash-screen": "~31.0.13",
-    "expo-status-bar": "~3.0.9",
-    "expo-web-browser": "~15.0.10",
-    "lucide-react-native": "^0.562.0",
-    "nativewind": "^4.2.1",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-purchases": "^9.6.12",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
-    "react-native-url-polyfill": "^3.0.0",
-    "react-native-worklets": "0.5.1",
-    "tailwindcss": "^3.4.19",
-    "zustand": "^5.0.9"
+    "@fontsource/cinzel": "^5.2.8",
+    "@fontsource/cormorant-garamond": "^5.2.11",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@types/three": "^0.182.0",
+    "autoprefixer": "^10.4.18",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
+    "postcss": "^8.4.35",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.17",
+    "three": "^0.182.0"
   },
   "devDependencies": {
-    "@expo/ngrok": "^4.1.3",
-    "@types/react": "~19.1.0",
-    "prettier": "^3.7.4",
-    "prettier-plugin-tailwindcss": "^0.7.2",
-    "typescript": "~5.9.2"
-  },
-  "private": true
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.4",
+    "vite": "^7.2.4"
+  }
 }
